Fix(iPongProfile): Revert z-index change
Reverts the addition of a z-index to the menu icon, as it caused issues with the header being hidden behind the icon.

--- a/frontend/srcs/pages/iPongProfile/iPongUserProfileViewAs/iPongUserProfileViewAs.css
+++ b/frontend/srcs/pages/iPongProfile/iPongUserProfileViewAs/iPongUserProfileViewAs.css
@@ -82,7 +82,7 @@
 }
 
 .menu-icon {
-  z-index: 200000;
+  /* z-index: 200000; */
   position: relative;
   margin-left: auto;
   width: 40px;
